Обновлен workflow для установки Node.js

--- a/.github/workflows/run-pyscript.yml
+++ b/.github/workflows/run-pyscript.yml
@@ -13,6 +13,32 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
+        python-version: '3.x'  # замените на нужную версию
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
+
+    - name: Run Python Script
+      run: python script.py
+
+name: Run Python 
+Script
+
+on: [push]
+
+jobs:
+  run-script:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
         python-version: '3.x'  # замените на версию Python, например '3.10'
 
     - name: Run Python Script
